k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth # select all pods with the auth label
  template:
    metadata:
      labels:
        app: auth # give all the pods an auth label
    spec:
      containers:
        - name: auth # only used for logging purposes
          image: cstudent/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000 # the port other pods use to talk to this service
      targetPort: 3000 # the port that this service uses to talk to its pods
---
# DATABASE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: auth-postgres
          image: postgres:14
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-cluster-ip
spec:
  selector:
    app: auth-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
