k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: cstudent/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-cluster-ip
spec:
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
### DATABASE ###
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-postgres
  template:
    metadata:
      labels:
        app: orders-postgres
    spec:
      containers:
        - name: orders-postgres
          image: postgres:14
---
apiVersion: v1
kind: Service
metadata:
  name: orders-postgres-cluster-ip
spec:
  selector:
    app: orders-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
