k8s/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: cstudent/payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000

### DATABASE ###
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-postgres
  template:
    metadata:
      labels:
        app: payments-postgres
    spec:
      containers:
        - name: payments-postgres
          image: postgres:14
---
apiVersion: v1
kind: Service
metadata:
  name: payments-postgres-svc
spec:
  type: ClusterIP
  selector:
    app: payments-postgres
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
