k8s/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: cstudent/products
---
apiVersion: v1
kind: Service
metadata:
  name: products-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: products
  ports:
    - name: products
      protocol: TCP
      port: 3000 # the port other pods use to talk to this service
      targetPort: 3000 # the port that this service uses to talk to its pods

### DATABASE ###
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-postgres
  template:
    metadata:
      labels:
        app: products-postgres
    spec:
      containers:
        - name: products-postgres
          image: postgres:14
---
apiVersion: v1
kind: Service
metadata:
  name: products-postgres-cluster-ip
spec:
  selector:
    app: products-postgres
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
